--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "react-scripts": "1.0.7"
   },
   "dependencies": {
+    "antd": "^2.11.0",
     "d3": "^4.9.1",
+    "firebase": "^4.1.2",
+    "jspdf": "^1.3.3",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-color": "^2.12.1",
     "react-dom": "^15.6.1",
+    "save-svg-as-png": "^1.2.0",
     "simplewebrtc": "^3.0.0",
     "webrtc-adapter": "^4.0.2"
   },
